syntax = "proto3";

package kvraftpb;

enum Op {
  Unknown = 0;
  Put = 1;
  Append = 2;
  Get = 3;
}

message KvRequest {
  string key = 1;
  string value = 2;
  Op op = 3;
  // You'll have to add definitions here.
  string cid = 4;
  uint64 seq = 5;
}

message KvReply {
  bool wrong_leader = 1;
  string err = 2;
  string value = 3;
}
